feat(users): my friends getting
